Fix tables stuck on left hand side

--- a/custom.css
+++ b/custom.css
@@ -603,3 +603,15 @@ table tbody tr td a span {
     font-size: 10px;
     font-family: Verdana,Arial,Helvetica,sans-serif;
 }
+
+.content div table {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+
+.content div div {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
